gtk4: Fix headerbar switch margins
The margin derived from default theme was too large, and caused the
headerbar to grow in height by 2px.

--- a/common/gtk-4.0/4.2/sass/_common.scss
+++ b/common/gtk-4.0/4.2/sass/_common.scss
@@ -1493,8 +1493,8 @@ headerbar {
   }
 
   switch {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 9px;
+    margin-bottom: 9px;
   }
 }
 
